; ModuleID = '/home/carl/AnghaBench/brotli/c/enc/extr_brotli_bit_stream.c_StoreCompressedMetaBlockHeader.c'
source_filename = "/home/carl/AnghaBench/brotli/c/enc/extr_brotli_bit_stream.c_StoreCompressedMetaBlockHeader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64, i64*, i32*)* @StoreCompressedMetaBlockHeader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @StoreCompressedMetaBlockHeader(i64 %0, i64 %1, i64* %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  store i32* %3, i32** %8, align 8
  %12 = load i64, i64* %5, align 8
  %13 = trunc i64 %12 to i32
  %14 = load i64*, i64** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @BrotliWriteBits(i32 1, i32 %13, i64* %14, i32* %15)
  %17 = load i64, i64* %5, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %4
  %20 = load i64*, i64** %7, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @BrotliWriteBits(i32 1, i32 0, i64* %20, i32* %21)
  br label %23

23:                                               ; preds = %19, %4
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @BrotliEncodeMlen(i64 %24, i32* %9, i64* %10, i32* %11)
  %26 = load i32, i32* %11, align 4
  %27 = load i64*, i64** %7, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @BrotliWriteBits(i32 2, i32 %26, i64* %27, i32* %28)
  %30 = load i64, i64* %10, align 8
  %31 = trunc i64 %30 to i32
  %32 = load i32, i32* %9, align 4
  %33 = load i64*, i64** %7, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = call i32 @BrotliWriteBits(i32 %31, i32 %32, i64* %33, i32* %34)
  %36 = load i64, i64* %5, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %42, label %38

38:                                               ; preds = %23
  %39 = load i64*, i64** %7, align 8
  %40 = load i32*, i32** %8, align 8
  %41 = call i32 @BrotliWriteBits(i32 1, i32 0, i64* %39, i32* %40)
  br label %42

42:                                               ; preds = %38, %23
  ret void
}

declare dso_local i32 @BrotliWriteBits(i32, i32, i64*, i32*) #1

declare dso_local i32 @BrotliEncodeMlen(i64, i32*, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
